modules/mlflow/v1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-server
  template:
    metadata:
      labels:
        app: mlflow-server
    spec:
      serviceAccountName: mlflow
      containers:
        - name: mlflow
          image: docker.io/hemaveeradhi/mlflow:amd64
          imagePullPolicy: IfNotPresent
          command: ["mlflow"]
          args:
            - server
            - --host
            - 0.0.0.0
            - --backend-store-uri
            - $(MLFLOW_BACKEND_URI)
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
