modules/mlflow/v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server
spec:
  type: ClusterIP
  selector:
    app: mlflow-server
  ports:
    - name: http
      port: 5000
      targetPort: 5000
