modules/mlflow/v1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlflow
spec:
  to:
    kind: Service
    name: mlflow-server
  port:
    targetPort: http
  tls:
    termination: edge
